chore(i18n): replace 'EMAIL_OR_PASSWORD_NOT_FOUND' with 'INVALID_CREDENTIALS' in all languages

--- a/src/i18n/en/services.json
+++ b/src/i18n/en/services.json
@@ -5,7 +5,7 @@
       "TOKEN_NOT_PROVIDED": "Token not provided",
       "LOGIN_FAILED": "Login failed",
       "UNAUTHORIZED": "Unauthorized",
-      "EMAIL_OR_PASSWORD_NOT_FOUND": "Email or password not found",
+      "INVALID_CREDENTIALS": "Email and/or password are incorrect.",
       "PASSWORD_NOT_MATCH": "Password not match"
     }
   },
