refactor(dto): refine review and user validations and improve i18n messages

--- a/src/i18n/es/validations.json
+++ b/src/i18n/es/validations.json
@@ -1,20 +1,21 @@
 {
   "USER": {
     "EMAIL": {
-      "STRING": "El correo electrónico debe ser una cadena",
       "INVALID": "El correo electrónico debe ser una dirección válida",
-      "MAX_LENGTH": "El correo electrónico debe tener máximo {maxLength} caracteres"
+      "MAX_LENGTH": "El correo electrónico debe tener máximo {maxLength} caracteres",
+      "MIN_LENGTH": "El correo electrónico debe tener mínimo {minLength} caracteres"
     },
     "DISPLAY_NAME": {
       "STRING": "El nombre de visualización debe ser una cadena",
-      "MAX_LENGTH": "El nombre de visualización debe tener máximo {maxLength} caracteres"
+      "MAX_LENGTH": "El nombre de visualización debe tener máximo {maxLength} caracteres",
+      "MIN_LENGTH": "El nombre de visualización debe tener mínimo {minLength} caracteres"
     },
     "USERNAME": {
       "STRING": "El nombre de usuario debe ser una cadena",
-      "MAX_LENGTH": "El nombre de usuario debe tener máximo {maxLength} caracteres"
+      "MAX_LENGTH": "El nombre de usuario debe tener máximo {maxLength} caracteres",
+      "MIN_LENGTH": "El nombre de usuario debe tener mínimo {minLength} caracteres"
     },
     "PASSWORD": {
-      "STRING": "La contraseña debe ser una cadena",
       "STRONG": "La contraseña debe tener mínimo {minLength} caracteres, {minNumbers} número, {minSymbols} símbolo y {minUppercase} letra mayúscula",
       "MAX_LENGTH": "La contraseña debe tener máximo {maxLength} caracteres"
     }
@@ -22,19 +23,23 @@
   "REVIEW": {
     "TITLE": {
       "STRING": "El título debe ser una cadena",
-      "MAX_LENGTH": "El título debe tener máximo {maxLength} caracteres"
+      "MAX_LENGTH": "El título debe tener máximo {maxLength} caracteres",
+      "MIN_LENGTH": "El título debe tener mínimo {minLength} caracteres"
     },
     "CONTENT": {
       "STRING": "El contenido debe ser una cadena",
-      "MAX_LENGTH": "El contenido debe tener máximo {maxLength} caracteres"
+      "MAX_LENGTH": "El contenido debe tener máximo {maxLength} caracteres",
+      "MIN_LENGTH": "El contenido debe tener mínimo {minLength} caracteres"
     },
     "AUTHOR": {
       "STRING": "El autor debe ser una cadena",
-      "MAX_LENGTH": "El autor debe tener máximo {maxLength} caracteres"
+      "MAX_LENGTH": "El autor debe tener máximo {maxLength} caracteres",
+      "MIN_LENGTH": "El autor debe tener mínimo {minLength} caracteres"
     },
     "RATING": {
-      "STRING": "La calificación debe ser una cadena",
-      "MAX_LENGTH": "La calificación debe tener máximo {maxLength} caracteres"
+      "NUMBER": "La calificación debe ser un número",
+      "MIN_VALUE": "La calificación debe ser al menos {min}",
+      "MAX_VALUE": "La calificación no debe ser mayor que {max}"
     }
   }
 }
