--- a/src/i18n/pt/validations.json
+++ b/src/i18n/pt/validations.json
@@ -1,20 +1,21 @@
 {
   "USER": {
     "EMAIL": {
-      "STRING": "E-mail deve ser uma string",
       "INVALID": "E-mail deve ser um endereço de e-mail válido",
-      "MAX_LENGTH": "E-mail deve ter no máximo {maxLength} caracteres"
+      "MAX_LENGTH": "E-mail deve ter no máximo {maxLength} caracteres",
+      "MIN_LENGTH": "E-mail deve ter no mínimo {minLength} caracteres"
     },
     "DISPLAY_NAME": {
       "STRING": "Nome de exibição deve ser uma string",
-      "MAX_LENGTH": "Nome de exibição deve ter no máximo {maxLength} caracteres"
+      "MAX_LENGTH": "Nome de exibição deve ter no máximo {maxLength} caracteres",
+      "MIN_LENGTH": "Nome de exibição deve ter no mínimo {minLength} caracteres"
     },
     "USERNAME": {
       "STRING": "Nome de usuário deve ser uma string",
-      "MAX_LENGTH": "Nome de usuário deve ter no máximo {maxLength} caracteres"
+      "MAX_LENGTH": "Nome de usuário deve ter no máximo {maxLength} caracteres",
+      "MIN_LENGTH": "Nome de usuário deve ter no mínimo {minLength} caracteres"
     },
     "PASSWORD": {
-      "STRING": "Senha deve ser uma string",
       "STRONG": "Senha deve ter no mínimo {minLength} caracteres, {minNumbers} número, {minSymbols} símbolo e {minUppercase} letra maiúscula",
       "MAX_LENGTH": "Senha deve ter no máximo {maxLength} caracteres"
     }
@@ -22,19 +23,23 @@
   "REVIEW": {
     "TITLE": {
       "STRING": "Título deve ser uma string",
-      "MAX_LENGTH": "Título deve ter no máximo {maxLength} caracteres"
+      "MAX_LENGTH": "Título deve ter no máximo {maxLength} caracteres",
+      "MIN_LENGTH": "Título deve ter no mínimo {minLength} caracteres"
     },
     "CONTENT": {
       "STRING": "Conteúdo deve ser uma string",
-      "MAX_LENGTH": "Conteúdo deve ter no máximo {maxLength} caracteres"
+      "MAX_LENGTH": "Conteúdo deve ter no máximo {maxLength} caracteres",
+      "MIN_LENGTH": "Conteúdo deve ter no mínimo {minLength} caracteres"
     },
     "AUTHOR": {
       "STRING": "Autor deve ser uma string",
-      "MAX_LENGTH": "Autor deve ter no máximo {maxLength} caracteres"
+      "MAX_LENGTH": "Autor deve ter no máximo {maxLength} caracteres",
+      "MIN_LENGTH": "Autor deve ter no mínimo {minLength} caracteres"
     },
     "RATING": {
-      "STRING": "Avaliação deve ser uma string",
-      "MAX_LENGTH": "Avaliação deve ter no máximo {maxLength} caracteres"
+      "NUMBER": "Avaliação deve ser um número",
+      "MIN_VALUE": "Avaliação deve ser no mínimo {min}",
+      "MAX_VALUE": "Avaliação deve ser no máximo {max}"
     }
   }
 }
