--- a/src/i18n/en/validations.json
+++ b/src/i18n/en/validations.json
@@ -1,20 +1,21 @@
 {
   "USER": {
     "EMAIL": {
-      "STRING": "Email must be a string",
       "INVALID": "Email must be a valid email address",
-      "MAX_LENGTH": "Email must be no longer than {maxLength} characters"
+      "MAX_LENGTH": "Email must be no longer than {maxLength} characters",
+      "MIN_LENGTH": "Email must be at least {minLength} characters"
     },
     "DISPLAY_NAME": {
       "STRING": "Display name must be a string",
-      "MAX_LENGTH": "Display name must be no longer than {maxLength} characters"
+      "MAX_LENGTH": "Display name must be no longer than {maxLength} characters",
+      "MIN_LENGTH": "Display name must be at least {minLength} characters"
     },
     "USERNAME": {
       "STRING": "Username must be a string",
-      "MAX_LENGTH": "Username must be no longer than {maxLength} characters"
+      "MAX_LENGTH": "Username must be no longer than {maxLength} characters",
+      "MIN_LENGTH": "Username must be at least {minLength} characters"
     },
     "PASSWORD": {
-      "STRING": "Password must be a string",
       "STRONG": "Password must have at least {minLength} characters, {minNumbers} number, {minSymbols} symbol and {minUppercase} uppercase letter",
       "MAX_LENGTH": "Password must be no longer than {maxLength} characters"
     }
@@ -22,19 +23,23 @@
   "REVIEW": {
     "TITLE": {
       "STRING": "Title must be a string",
-      "MAX_LENGTH": "Title must be no longer than {maxLength} characters"
+      "MAX_LENGTH": "Title must be no longer than {maxLength} characters",
+      "MIN_LENGTH": "Title must be at least {minLength} characters"
     },
     "CONTENT": {
       "STRING": "Content must be a string",
-      "MAX_LENGTH": "Content must be no longer than {maxLength} characters"
+      "MAX_LENGTH": "Content must be no longer than {maxLength} characters",
+      "MIN_LENGTH": "Content must be at least {minLength} characters"
     },
     "AUTHOR": {
       "STRING": "Author must be a string",
-      "MAX_LENGTH": "Author must be no longer than {maxLength} characters"
+      "MAX_LENGTH": "Author must be no longer than {maxLength} characters",
+      "MIN_LENGTH": "Author must be at least {minLength} characters"
     },
     "RATING": {
-      "STRING": "Rating must be a string",
-      "MAX_LENGTH": "Rating must be no longer than {maxLength} characters"
+      "NUMBER": "Rating must be a number",
+      "MIN_VALUE": "Rating must be at least {min}",
+      "MAX_VALUE": "Rating must be no greater than {max}"
     }
   }
 }
